<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.apigeedemo.grpc</groupId>
  <artifactId>javagrpcdemo</artifactId>
  <version>1.9-SNAPSHOT</version>
  <!-- <packaging>jar</packaging> -->

  <name>javagrpcdemo</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <protoc.option>osx-x86_64</protoc.option>
    <assembly.name>my-assembly</assembly.name>
  </properties>

  
   <repositories>
    <repository>
      <id>artifact-registry</id>
      <url>https://us-maven.pkg.dev/apigee-release/apigee-java-callout-dependencies</url>
    </repository>
    </repositories>

  <dependencies>
  <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20240303</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.apigee.gateway.libraries</groupId>
      <artifactId>message-flow</artifactId>
      <version>1.0.0</version>
      <scope>provided</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>com.apigee.infra.libraries</groupId>
      <artifactId>expressions</artifactId>
      <version>1.0.0</version>
      <scope>provided</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-netty-shaded</artifactId>
      <version>1.53.0</version>
       <scope>compile</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-protobuf</artifactId>
      <version>1.53.0</version>
       <scope>compile</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-stub</artifactId>
      <version>1.53.0</version>
       <scope>compile</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>4.28.2</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.14.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easytesting</groupId>
      <artifactId>fest-assert-core</artifactId>
      <version>2.0M10</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.easytesting</groupId>
      <artifactId>fest-reflect</artifactId>
      <version>1.4.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
              <groupId>org.testng</groupId>
              <artifactId>testng</artifactId>
              <version>7.9.0</version>
              <scope>test</scope>
          </dependency>
    <dependency>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
    </dependency>
    <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.0.0</version>
    </dependency>
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>  
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
    <dependency>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.cloud</groupId>
      <artifactId>google-cloud-logging</artifactId>
      <version>3.5.1</version> 
      </dependency>
  </dependencies>

  <build>
  <extensions>
    <extension>
      <groupId>kr.motd.maven</groupId>
      <artifactId>os-maven-plugin</artifactId>
      <version>1.7.0</version>
    </extension>
  </extensions>
  <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
    <!-- <pluginManagement> -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.0</version> 
          <executions>
          <execution>
            <id>copy-resources</id>
            <phase>package</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${basedir}/../../apigee_proxies/grpcjavacallout/apiproxy/resources/java</outputDirectory>
              <!--outputDirectory>${basedir}</outputDirectory-->
              <resources>
                <resource>
                  <directory>target</directory>
                    <!--filtering>true</filtering-->
                  <includes>
                    <include>${project.name}-${version}.jar</include> 
                    <!--this will copy the assembly jar file-->
                    <!--include>${project.name}-${version}-${assembly.name}.jar</include--> 
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <release>${maven.compiler.target}</release>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
          </configuration>
        </plugin>
        <!-- <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin> -->
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.xolstice.maven.plugins</groupId>
          <artifactId>protobuf-maven-plugin</artifactId>
          <version>0.6.1</version>
          <configuration>
            <protocArtifact>com.google.protobuf:protoc4.28.2:exe:${protoc.option}</protocArtifact>
            <pluginId>grpc-java</pluginId>
            <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.67.0:exe:${os.detected.classifier}</pluginArtifact>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>compile</goal>
                <goal>compile-custom</goal>
              </goals>
            </execution>
          </executions>
      </plugin>
       <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
        <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
          <properties>
            <!-- <property>
              <name>junit</name>
              <value>false</value>
            </property> -->
          </properties>
          <threadCount>1</threadCount>
          <!--<groups>all</groups>-->
          <suiteXmlFiles>
              <file>testng.xml</file>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <!-- <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit47</artifactId>
            <version>2.19.1</version>
          </dependency> -->
          
          <!-- <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-testng</artifactId>
            <version>3.5.1</version>      
          </dependency> -->
          <dependency>
              <groupId>org.testng</groupId>
              <artifactId>testng</artifactId>
              <version>7.9.0</version>
          
          </dependency>
        </dependencies>
      </plugin>
      <!--This will create an uber jar with the dependencies listed in the assembly.xml file.-->
      <!-- <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.6.0</version> 
            <configuration>
             <descriptors>
                <descriptor>src/main/assembly.xml</descriptor> 
              </descriptors>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
                <archive>
                    <manifest>
                        <mainClass>com.apigeedemo.grpc.JavaGrpcHelloCallout</mainClass> 
                    </manifest>
                </archive>
            </configuration>
            <executions>
                <execution>
                    <id>make-assembly</id>
                    <phase>package</phase> 
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
        </plugin> -->

        <!--This is used for troubleshooting.-->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.1.0</version>
            <configuration>
                      <target>
                          <echo message="Hello, world"/>
                          <echo message="Embed a line break: ${line.separator}"/>
                          <echo message="Build dir: ${project.build.directory}" level="info"/>
                      </target>
                  </configuration>
            <executions>
              <execution>
                  <id>antrun-plugin</id>
                  <phase>validate</phase>
                  <goals>
                      <goal>run</goal>
                  </goals> 
              </execution>
            </executions>
        </plugin> 
         <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
              <execution>
          
                <phase>package</phase>
                <goals>
                  <goal>copy-dependencies</goal>
                </goals>
                <configuration>
                  <!--includeArtifactIds>json,grpc-protobuf,grpc-stub,protobuf-java,google-cloud-logging</includeArtifactIds-->
                  <includeArtifactIds>json,grpc-stub</includeArtifactIds>
                  <!-- <outputDirectory>${project.build.directory}/lib</outputDirectory> -->
                  <outputDirectory> ${basedir}/../java_libs</outputDirectory>
                  <includeScope>compile</includeScope>
                </configuration>
              </execution>
            </executions>
          </plugin>
      </plugins>
    <!-- </pluginManagement> -->
  </build>
</project>
